--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.222",
     "sass": "^1.75.0"
   },
   "devDependencies": {
